initially hides enable-otp-fields to prevent flicker

--- a/app/assets/stylesheets/components/two-factor-fields.sass
+++ b/app/assets/stylesheets/components/two-factor-fields.sass
@@ -7,6 +7,8 @@
     width: 250px
     height: 250px
     border: 20px solid white
+  .enable-otp-fields
+    display: none
   .instructions
     padding: 20px
     background-color: #F2F2F2
